redirect to new site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>redirect :3</title>
-<meta http-equiv="Refresh" content="0; url='https://donfluffles.gay'" />
+<meta http-equiv="Refresh" content="0; url='https://donfluffles.pro'" />
 </title>
 <body>if you are not redirected please <a href="https://donfluffles.gay">click here :3</a></body>
 </html>
